增加性格修正表格

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "pages/abilitydetail/index",
     "pages/logs/logs",
     "pages/info/index",
-    "pages/advertisement/index"
+    "pages/character/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
